--- a/aviatickets-demo/package.json
+++ b/aviatickets-demo/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
