--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.19.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.17.2",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
