--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
     "mongoose": "^8.19.3",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
@@ -44,6 +45,7 @@
     "react-native-screens": "^4.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stream-buffers": "^3.0.3",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^13.0.0"
   },
