--- a/aviatickets-demo/app.json
+++ b/aviatickets-demo/app.json
@@ -1,27 +1,23 @@
 {
   "expo": {
-    "name": "aviatickets-demo",
+    "name": "Aviatickets Demo",
     "slug": "aviatickets-demo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
+      "package": "com.aviatickets.demo",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "package": "com.aviatickets.demo"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
