--- a/aviatickets-demo/app.json
+++ b/aviatickets-demo/app.json
@@ -26,6 +26,9 @@
       "eas": {
         "projectId": "cbd50dd3-8e92-4031-bf47-11d29180a0ba"
       }
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
